--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+        <a href="../odin-recipes/odin-recipes-homepage-image.gif" alt="A short animation of veggies frying on the cooktop"
+    <h2>My Favorite Recipes</h2>
         <ul>
             <li><a href="recipes/tortilla-pizza.html">Tortilla Pizza</a></li>
             <li><a href="recipes/custard-tart.html">Custard Tart</a></li>
