Fix code on index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-        <a href="../odin-recipes/odin-recipes-homepage-image.gif" alt="A short animation of veggies frying on the cooktop"
+        <img src="../odin-recipes/odin-recipes-homepage-image.gif" alt="A short animation of veggies frying on the cooktop"
     <h2>My Favorite Recipes</h2>
         <ul>
             <li><a href="recipes/tortilla-pizza.html">Tortilla Pizza</a></li>
